--- a/bio.html
+++ b/bio.html
@@ -87,41 +87,38 @@
 					</div>
 				</div> <!-- Page width -->
 			</header> <!-- Site head -->
-			<section class="page">
-				<section class="bio">
-					<div class="page-width">
-						<div class="medium-10 large-8">
-							<header class="page-header">
-								<h1 class="page-title">Biogrāfija</h1>
-							</header> <!-- Page header -->
+			<section class="page bio">
+				<div class="page-width">
+					<div class="medium-10 large-8">
+						<header class="page-header">
+							<h1 class="page-title">Biogrāfija</h1>
+						</header> <!-- Page header -->
+					</div>
+				</div> <!-- Page width -->
+				<div class="page-width">
+					<div class="medium-10 large-5 xlarge-6 medium-offset-1 large-offset-0 xlarge-pull-1">
+						<header class="bio-header txt-center cfix">
+							<img class="bio-img" src="img/martins-mihailovs.jpg" alt="Mārtiņš Mihailovs">
+							<div class="bio-meta">
+								<h2 class="bio-name">Mārtiņš Mihailovs</h2>
+								<small class="bio-occupation">Grafikas dizainers</small>
+							</div>	<!-- Bio meta -->
+						</header> <!-- Bio header -->
+					</div>
+					<div class="bio-entry">
+						<div class="medium-10 large-7 xlarge-8 medium-offset-1 large-offset-0 xlarge-push-1">
+							<h2>Mazpilsēta - lielpilsēta</h2>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, debitis, obcaecati esse asperiores rem quaerat quas magnam omnis libero quam ullam voluptatem consectetur neque ipsam cumque. Expedita, sequi, quasi non quisquam quae repudiandae veniam magni dolor blanditiis laboriosam excepturi cupiditate deserunt in facere pariatur ullam totam quibusdam laborum eum quam dolorum iusto minus. Non, voluptate, amet deserunt vitae distinctio officiis nihil maiores consequatur beatae error veniam corporis quos. Numquam, aperiam qui odit ipsam delectus eum accusamus nesciunt quia similique ex!</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, repellat, incidunt, maiores veritatis nostrum ut reprehenderit a asperiores pariatur magni voluptate qui fugit laborum. Veritatis, odit, ipsam, eius, cumque commodi nobis placeat rerum consectetur suscipit blanditiis nemo neque deleniti id unde exercitationem delectus expedita quisquam voluptatem officiis accusamus. Ea, repellendus.</p>
+							<h2>Lorem ipsum dolor sit amet</h2>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, quia, accusantium iure quam ullam pariatur repudiandae molestiae minus neque minima odio natus rem voluptates in aspernatur! Tempore, voluptates, sit, itaque natus hic autem ut pariatur aspernatur voluptatibus saepe eius nihil dolore ipsum possimus magnam nemo quisquam nesciunt fugiat dignissimos ducimus consequuntur at fugit impedit unde perferendis consequatur molestias voluptas? Dolorem.</p>
+							<p>Ja Tev patīk tas, ko Tu redzi un lasi, dod man zināt - <br><a href="#">m.mihailovs@gmail.com</a></p>
 						</div>
-					</div> <!-- Page width -->
-					<div class="page-width">
-						<div class="medium-10 large-5 xlarge-6 medium-offset-1 large-offset-0 xlarge-pull-1">
-							<header class="bio-header txt-center cfix">
-								<img class="bio-img" src="img/martins-mihailovs.jpg" alt="Mārtiņš Mihailovs">
-								<div class="bio-meta">
-									<h2 class="bio-name">Mārtiņš Mihailovs</h2>
-									<small class="bio-occupation">Grafikas dizainers</small>
-								</div>	<!-- Bio meta -->
-							</header> <!-- Bio header -->
-						</div>
-						<div class="bio-entry">
-							<div class="medium-10 large-7 xlarge-8 medium-offset-1 large-offset-0 xlarge-push-1">
-								<h2>Mazpilsēta - lielpilsēta</h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, debitis, obcaecati esse asperiores rem quaerat quas magnam omnis libero quam ullam voluptatem consectetur neque ipsam cumque. Expedita, sequi, quasi non quisquam quae repudiandae veniam magni dolor blanditiis laboriosam excepturi cupiditate deserunt in facere pariatur ullam totam quibusdam laborum eum quam dolorum iusto minus. Non, voluptate, amet deserunt vitae distinctio officiis nihil maiores consequatur beatae error veniam corporis quos. Numquam, aperiam qui odit ipsam delectus eum accusamus nesciunt quia similique ex!</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, repellat, incidunt, maiores veritatis nostrum ut reprehenderit a asperiores pariatur magni voluptate qui fugit laborum. Veritatis, odit, ipsam, eius, cumque commodi nobis placeat rerum consectetur suscipit blanditiis nemo neque deleniti id unde exercitationem delectus expedita quisquam voluptatem officiis accusamus. Ea, repellendus.</p>
-								<h2>Lorem ipsum dolor sit amet</h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, quia, accusantium iure quam ullam pariatur repudiandae molestiae minus neque minima odio natus rem voluptates in aspernatur! Tempore, voluptates, sit, itaque natus hic autem ut pariatur aspernatur voluptatibus saepe eius nihil dolore ipsum possimus magnam nemo quisquam nesciunt fugiat dignissimos ducimus consequuntur at fugit impedit unde perferendis consequatur molestias voluptas? Dolorem.</p>
-								<p>Ja Tev patīk tas, ko Tu redzi un lasi, dod man zināt - <br><a href="#">m.mihailovs@gmail.com</a></p>
-							</div>
-						</div> <!-- Bio entry -->
-					</div> <!-- Page width -->
-				</section> <!-- Archive -->
+					</div> <!-- Bio entry -->
+				</div> <!-- Page width -->
 			</section> <!-- Page -->
 		</div>
 	</div> <!-- Page width -->
-	
 
 	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 	<script>
