Remove .bio-entry class. Use .post-entry instead

--- a/bio.html
+++ b/bio.html
@@ -105,7 +105,7 @@
 							</div>	<!-- Bio meta -->
 						</header> <!-- Bio header -->
 					</div>
-					<div class="bio-entry">
+					<div class="post-entry cfix">
 						<div class="medium-10 large-7 xlarge-8 medium-offset-1 large-offset-0 xlarge-push-1">
 							<h2>Mazpilsēta - lielpilsēta</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, debitis, obcaecati esse asperiores rem quaerat quas magnam omnis libero quam ullam voluptatem consectetur neque ipsam cumque. Expedita, sequi, quasi non quisquam quae repudiandae veniam magni dolor blanditiis laboriosam excepturi cupiditate deserunt in facere pariatur ullam totam quibusdam laborum eum quam dolorum iusto minus. Non, voluptate, amet deserunt vitae distinctio officiis nihil maiores consequatur beatae error veniam corporis quos. Numquam, aperiam qui odit ipsam delectus eum accusamus nesciunt quia similique ex!</p>
