--- a/bio.html
+++ b/bio.html
@@ -97,7 +97,7 @@
 				</div> <!-- Page width -->
 				<div class="page-width">
 					<div class="medium-10 large-5 xlarge-6 medium-offset-1 large-offset-0 xlarge-pull-1">
-						<header class="bio-header txt-center cfix">
+						<header class="bio-header cfix">
 							<img class="bio-img" src="img/martins-mihailovs.jpg" alt="Mārtiņš Mihailovs">
 							<div class="bio-meta">
 								<h2 class="bio-name">Mārtiņš Mihailovs</h2>
