--- a/bio.html
+++ b/bio.html
@@ -14,7 +14,7 @@ title: Biogrāfija
 				<div class="page-width">
 					<div class="medium-10 large-5 xlarge-6 medium-offset-1 large-offset-0 xlarge-pull-1">
 						<header class="bio-header cfix">
-							<img class="bio-img" src="{{ site.url }}/img/martins-mihailovs.jpg" alt="{{ site.owner.name }}">
+							<img class="bio-img" src="{{ site.baseurl }}/img/martins-mihailovs.jpg" alt="{{ site.owner.name }}">
 							<div class="bio-meta">
 								<h2 class="bio-name">{{ site.owner.name }}</h2>
 								<small class="bio-occupation">{{ site.owner.occupation }}</small>
