--- a/bio.html
+++ b/bio.html
@@ -3,7 +3,7 @@ permalink: /bio/
 layout: page
 title: Biogrāfija
 ---
-			<section class="page bio">
+			<section class="page-content bio">
 				<div class="page-width">
 					<div class="medium-10 large-5 xlarge-6 medium-offset-1 large-offset-0 xlarge-pull-1">
 						<header class="bio-header cfix">
