Update bio page

--- a/bio.html
+++ b/bio.html
@@ -9,19 +9,18 @@ title: Biogrāfija
 						<header class="bio-header cfix">
 							<img class="bio-img" src="{{ site.baseurl }}/img/martins-mihailovs.jpg" alt="{{ site.owner.name }}">
 							<div class="bio-meta">
-								<h2 class="bio-name">{{ site.owner.name }}</h2>
-								<small class="bio-occupation">{{ site.owner.occupation }}</small>
+								<h3 class="bio-name">{{ site.owner.name }}</h3>
+								<h2 class="bio-occupation">{{ site.owner.occupation }}</h2>
 							</div>	<!-- Bio meta -->
 						</header> <!-- Bio header -->
 					</div>
 					<div class="post-entry cfix">
 						<div class="medium-10 large-7 xlarge-8 medium-offset-1 large-offset-0 xlarge-push-1">
-							<h2>Mazpilsēta - lielpilsēta</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, debitis, obcaecati esse asperiores rem quaerat quas magnam omnis libero quam ullam voluptatem consectetur neque ipsam cumque. Expedita, sequi, quasi non quisquam quae repudiandae veniam magni dolor blanditiis laboriosam excepturi cupiditate deserunt in facere pariatur ullam totam quibusdam laborum eum quam dolorum iusto minus. Non, voluptate, amet deserunt vitae distinctio officiis nihil maiores consequatur beatae error veniam corporis quos. Numquam, aperiam qui odit ipsam delectus eum accusamus nesciunt quia similique ex!</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, repellat, incidunt, maiores veritatis nostrum ut reprehenderit a asperiores pariatur magni voluptate qui fugit laborum. Veritatis, odit, ipsam, eius, cumque commodi nobis placeat rerum consectetur suscipit blanditiis nemo neque deleniti id unde exercitationem delectus expedita quisquam voluptatem officiis accusamus. Ea, repellendus.</p>
-							<h2>Lorem ipsum dolor sit amet</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, quia, accusantium iure quam ullam pariatur repudiandae molestiae minus neque minima odio natus rem voluptates in aspernatur! Tempore, voluptates, sit, itaque natus hic autem ut pariatur aspernatur voluptatibus saepe eius nihil dolore ipsum possimus magnam nemo quisquam nesciunt fugiat dignissimos ducimus consequuntur at fugit impedit unde perferendis consequatur molestias voluptas? Dolorem.</p>
-							<p>Ja Tev patīk tas, ko Tu redzi un lasi, dod man zināt - <br><a href="#">{{ site.owner.email }}</a></p>
+							<h2>Mazpilsēta&mdash;lielpilsēta</h2>
+							<p>Esi sveicināts, draugs, mani sauc Mārtiņš Mihailovs, es esmu 26 gadus vecs grafikas dizainers / web izstrādātājs no Rīgas. Un no Alūksnes arī mazliet. Labam un funkcionālam dizainam ir liela nozīme manā dzīvē. Dizains ir mans darbs, mana ikdiena. 2000. gadu sākumā Alūksnē populāras bija divas lietas: karaoke un Hip-Hop dejas. Es pamēģināju un izgāzos abās, bet tieši deja mani <em>piespieda</em> paņemt video kameru un sākt apgūt failu apstrādes programmas (Windows Movie Maker, bro). Kopš tā laika dažādi radošie projekti ir mana ikdiena.</p>
+							<h2>Dizaina loģistika</h2>
+							<p>Reklāmists pēc pārliecības un diploma, kas pēc studiju beigšanas nonāca mārketinga komandā vienā no lielākajiem loģistikas centriem Latvijā. Īsti nespējot izrunāt vārdu <em>loģistika</em>, kur nu vēl izprast, kas tas īsti ir, man uzticējās un tika dota iespēja strādāt pie neskaitāmiem radošiem un tehniski izaicinošiem projektiem&mdash;no reklāmas materiālu izgatavošanas pirmajos mēnešos, līdz web aplikāciju dizainam un kodam turpmākajos gados. Lai arī šobrīd mazliet novārtā, es joprojām ticu reklāmai, bet papildus tam esmu sācis ticēt naudas neizsviešanai.</p>
+							<p>Es nepārspīlējot varu teikt, ka man ir vislabākais darbs pasaulē, un šī mājaslapa, kā sacīt jāsaka, ir mēģinājums par to pastāstīt citiem. Ja Tev patīk tas, ko Tu redzi un lasi, dod man zināt&mdash; <br><a href="#">{{ site.owner.email }}</a></p>
 						</div>
 					</div> <!-- Bio entry -->
 				</div> <!-- Page width -->
