Add description text to bio page

--- a/bio.html
+++ b/bio.html
@@ -2,6 +2,7 @@
 permalink: /bio/
 layout: page
 title: Biogrāfija
+description: Esi sveicināts, draugs, mani sauc Mārtiņš Mihailovs, es esmu 26 gadus vecs grafikas dizainers / web izstrādātājs no Rīgas
 ---
 			<section class="page-content bio">
 				<div class="page-width">
