--- a/_pages/bio.html
+++ b/_pages/bio.html
@@ -17,7 +17,7 @@ description: Esi sveicināts, draugs, mani sauc Mārtiņš Mihailovs, es esmu 26
 					</div>
 					<div class="post-entry cfix">
 						<div class="medium-10 large-7 xlarge-8 medium-offset-1 large-offset-0 xlarge-push-1">
-							<h2>Mazpilsēta&mdash;lielpilsēta</h2>
+							<h2 class="no-mg-top">Mazpilsēta&mdash;lielpilsēta</h2>
 							<p>Esi sveicināts, draugs, mani sauc {{ site.owner.name }}, es esmu {{ site.owner.age }} gadus vecs grafikas dizainers / web izstrādātājs no Rīgas. Un no Alūksnes arī mazliet. Labam un funkcionālam dizainam ir liela nozīme manā dzīvē. Dizains ir mans darbs, mana ikdiena. 2000. gadu sākumā Alūksnē populāras bija divas lietas: karaoke un Hip-Hop dejas. Es pamēģināju un izgāzos abās, bet tieši deja mani <em>piespieda</em> paņemt video kameru un sākt apgūt failu apstrādes programmas (Windows Movie Maker, bro). Kopš tā laika dažādi radošie projekti ir mana ikdiena.</p>
 							<h2>Dizaina loģistika</h2>
 							<p>Reklāmists pēc pārliecības un diploma, kas pēc studiju beigšanas nonāca mārketinga komandā vienā no lielākajiem loģistikas centriem Latvijā. Īsti nespējot izrunāt vārdu <em>loģistika</em>, kur nu vēl izprast, kas tas īsti ir, man uzticējās un tika dota iespēja strādāt pie neskaitāmiem radošiem un tehniski izaicinošiem projektiem&mdash;no reklāmas materiālu izgatavošanas pirmajos mēnešos, līdz web aplikāciju dizainam un kodam turpmākajos gados. Lai arī šobrīd mazliet novārtā, es joprojām ticu reklāmai, bet papildus tam esmu sācis ticēt naudas neizsviešanai.</p>
