Add trailing slashes to pages

--- a/_pages/bio.html
+++ b/_pages/bio.html
@@ -1,5 +1,5 @@
 ---
-permalink: /bio
+permalink: /bio/
 layout: page
 title: Biogrāfija
 description: Esi sveicināts, draugs, mani sauc Mārtiņš Mihailovs, es esmu 26 gadus vecs grafikas dizainers / web izstrādātājs no Rīgas
